# Meta_Stamp_V3

./: .dockerignore  .gitignore  KEYMAP.md  README.md  docker-compose.dev.yml  docker-compose.yml
backend/: .dockerignore  .env.example  Dockerfile  main.py  nixpacks.toml  pyproject.toml  pytest.ini  requirements.txt  ruff.toml  start.sh
backend/app/: __init__.py  config.py  main.py
backend/app/api/: __init__.py
backend/app/api/v1/: __init__.py  agents.py  agreements.py  analytics.py  assets.py  assistant.py  auth.py  fingerprint.py  pockets.py  upload.py  wallet.py
backend/app/api/v1/keymap/: __init__.py  ai_routes.py  routes.py
backend/app/core/: __init__.py  auth.py  database.py  redis_client.py  storage.py
backend/app/mcp/: __init__.py  keymap_tools.py  middleware.py  server.py  tools.py
backend/app/models/: __init__.py  agent.py  agreement.py  analytics.py  asset.py  fingerprint.py  pocket.py  pull_log.py  user.py  wallet.py
backend/app/services/: __init__.py  agent_auth_service.py  agreement_service.py  ai_assistant_service.py  ai_value_service.py  fingerprinting_service.py  metadata_service.py  metering_service.py  pocket_service.py  storage_service.py  upload_service.py  url_processor_service.py
backend/app/services/keymap/: __init__.py  codex_prompts.py  export_engine.py  shortcut_db.py
backend/app/utils/: __init__.py  cache.py  file_validator.py  logger.py  security.py
backend/tests/: __init__.py  conftest.py  test_agent_auth_service.py  test_ai_assistant.py  test_analytics.py  test_auth.py  test_fingerprint.py  test_mcp.py  test_metering_service.py  test_pockets.py  test_upload.py
blitzy/documentation/: Project Guide.md  Technical Specifications.md
docs/: API.md  ARCHITECTURE.md  DEPLOYMENT.md  DEVELOPMENT.md
frontend/: .dockerignore  .env.example  .eslintrc.json  .prettierrc  Dockerfile  app.js  eslint.config.js  index.html  package-lock.json  package.json  postcss.config.js  tailwind.config.js  tsconfig.json  vite.config.ts  vitest.setup.ts
frontend/src/: App.tsx  main.tsx  vite-env.d.ts
frontend/src/__tests__/: App.test.tsx  Dashboard.test.tsx  Layout.test.tsx  Login.test.tsx  SmartUploader.test.tsx  test-utils.tsx
frontend/src/components/: AIAssistant.tsx  AITouchScore.tsx  AITouchValue.tsx  AssetCard.tsx  ChatMessage.tsx  FileDropZone.tsx  FingerprintSummary.tsx  Layout.tsx  Navbar.tsx  Sidebar.tsx  SmartUploader.tsx  TransactionHistory.tsx  URLInput.tsx  UploadProgress.tsx  WalletBalance.tsx
frontend/src/components/keymap/: AppSelector.tsx  CoverageBar.tsx  ExportPanel.tsx  KeyboardVisualizer.tsx  MappingTable.tsx
frontend/src/contexts/: AuthContext.tsx  ThemeContext.tsx  UploadContext.tsx
frontend/src/hooks/: useAIAssistant.tsx  useAssets.tsx  useAuth.tsx  useUpload.tsx  useWallet.tsx  useWebSocket.tsx
frontend/src/pages/: Assets.tsx  Dashboard.tsx  Login.tsx  NotFound.tsx  Pockets.tsx  Upload.tsx  Wallet.tsx
frontend/src/pages/KeyMap/: index.tsx
frontend/src/routes/: PrivateRoute.tsx  index.tsx
frontend/src/services/: api.ts  assetService.ts  assistantService.ts  authService.ts  pocketService.ts  storageService.ts  uploadService.ts  walletService.ts
frontend/src/services/keymap/: keymapService.ts
frontend/src/styles/: index.css
frontend/src/types/: api.ts  asset.ts  pocket.ts  user.ts  wallet.ts
frontend/src/types/keymap/: index.ts
scripts/: backup.sh  create_test_data.py  demo_pull.py  deploy.sh  init_db.py  seed_pockets.py
scripts/mongo-init/: 01-seed-demo-user.js
