[tool.poetry]
name = "meta-stamp-v3-backend"
version = "1.0.0"
description = "META-STAMP V3: Global compensation foundation between AI companies and creators"
authors = ["Meta-Stamp Team"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.122.0"
uvicorn = {extras = ["standard"], version = "^0.38.0"}
pydantic = "^2.12.4"
pydantic-settings = "^2.12.0"
motor = "^3.7.1"
redis = "^7.1.0"
boto3 = "^1.41.4"
python-jose = {extras = ["cryptography"], version = "^3.5.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
langchain = "^1.1.0"
langchain-openai = "^1.1.0"
langchain-anthropic = "^1.2.0"
langchain-google-genai = "^3.2.0"
pillow = "^12.0.0"
imagehash = "^4.3.2"
librosa = "^0.11.0"
opencv-python-headless = "^4.12.0"
requests = "^2.32.5"
beautifulsoup4 = "^4.12.3"
lxml = "^5.1.0"
youtube-transcript-api = "^0.6.1"
aiofiles = "^25.1.0"
python-multipart = "^0.0.20"
pyyaml = "^6.0.3"

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.1"
pytest-asyncio = "^1.3.0"
pytest-cov = "^7.0.0"
httpx = "^0.28.1"
black = "^25.11.0"
ruff = "^0.14.6"
mypy = "^1.18.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
dev = "uvicorn app.main:app --host 0.0.0.0 --port 8000 --reload"
start = "uvicorn app.main:app --host 0.0.0.0 --port 8000"
test = "pytest"

[tool.black]
line-length = 100
target-version = ["py311"]
include = '\.pyi?$'
extend-exclude = '''
/(
    \.venv
    | build
    | dist
)/
'''

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "F", "I"]
ignore = []
exclude = [".venv", "build", "dist", "migrations", "__pycache__"]

[tool.ruff.isort]
known-first-party = ["app"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
